--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -23,12 +23,8 @@ author_profile: true
         <h2>{{ category[1].title }}</h2><hr />
         {% assign title_shown = true %}
       {% endunless %}
-      {% include archive-single.html %}
+      [{{ category[1].title | slice: 0, 1 }}{{ forloop.index }}] {{ post.authors }}. <a href="{{post.permalink}}">&quot;{{post.title}},&quot;</a> in <i>{{post.venue}}</i>. {{post.date | date: "%Y"}}.
     {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
   {% endfor %}
 {% endif %}
 
